--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -1,4 +1,4 @@
-name: Build And Push Image
+name: Build And Push to Docker Hub
 
 on:
   workflow_dispatch:
@@ -8,17 +8,16 @@ on:
         required: false
         type: string
         default: 'production'
+
 env:
-  REGION: ${{ vars.REGION }}
-  ECR_REPOSITORY: ${{ vars.ECR_REPOSITORY }}
+  DOCKER_HUB_REPOSITORY: https://hub.docker.com/repositories/abbass69  # 👈 Change this
 
 permissions:
-  id-token: write
   contents: read
 
 jobs:
   build:
-    name: Build for ${{ inputs.environment }}
+    name: Build and Push to Docker Hub
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
@@ -26,33 +25,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Login to ECR
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.ECR_REGISTRY }}
-          username: ${{ secrets.ECR_USERNAME }}
-          password: ${{ secrets.ECR_PASSWORD }}
-
-      - name: Setup GitHub secrets
-        run: |
-          echo '{"github-oauth": {"github.com": "${{ secrets.ORG_GITHUB_TOKEN }}"}}' >> auth.json
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}  # 👈 Docker Hub username
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}     # 👈 Docker Hub PAT (Personal Access Token)
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, tag, and push to Docker Hub
         id: build-image
         env:
-          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
-          ECR_REPOSITORY: ${{ vars.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          # Build a docker container and
-          # push it to ECR so that it can
-          # be deployed to ECS.
-          docker build --secret id=composer_auth,src=auth.json -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker build -t $DOCKER_HUB_REPOSITORY:latest -t $DOCKER_HUB_REPOSITORY:$IMAGE_TAG .
+          docker push $DOCKER_HUB_REPOSITORY:latest
+          docker push $DOCKER_HUB_REPOSITORY:$IMAGE_TAG
+          echo "image=$DOCKER_HUB_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
       - name: Image digest
         run: echo ${{ steps.build-image.outputs.digest }}
