--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -10,7 +10,7 @@ on:
         default: 'production'
 
 env:
-  DOCKER_HUB_REPOSITORY: https://hub.docker.com/repositories/abbass69  # 👈 Change this
+  DOCKER_HUB_REPOSITORY: abbass69/github-actions  # 👈 Change this
 
 permissions:
   contents: read
